tdf#117037 - Support Unicode minus (0x2212) in the number scanner

Change-Id: I5b2cd4f3d6ac23e10dc0745819c7955d0a8ff170
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148432
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit 34510e6e57e58fb27071564f546bbd420404e66d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148963
Reviewed-by: Caolán McNamara <caolanm@redhat.com>